[TEST] TripService 테스트 수정 및 Mock 설정 보강