@@ -10,6 +10,7 @@ import com.example.pventure.domain.trip.dto.response.TripResponseDto;
 import com.example.pventure.domain.trip.entity.Trip;
 import com.example.pventure.domain.trip.enums.TripStatus;
 import com.example.pventure.domain.trip.repository.TripRepository;
+import com.example.pventure.domain.trip.util.TripFinder;
 import com.example.pventure.domain.tripFolder.service.TripFolderService;
 import com.example.pventure.domain.user.entity.User;
 import com.example.pventure.domain.user.enums.SocialProvider;
@@ -36,16 +37,12 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class TripServiceTest {
 
-    @Mock
-    private UserRepository userRepository;
-    @Mock
-    private TripRepository tripRepository;
-    @Mock
-    private MemberService memberService;
-    @Mock
-    private FolderService folderService;
-    @Mock
-    private TripFolderService tripFolderService;
+    @Mock private UserRepository userRepository;
+    @Mock private TripRepository tripRepository;
+    @Mock private MemberService memberService;
+    @Mock private FolderService folderService;
+    @Mock private TripFolderService tripFolderService;
+    @Mock private TripFinder tripFinder;
 
     @InjectMocks
     private TripServiceImpl tripService;
@@ -58,7 +55,6 @@ class TripServiceTest {
 
     @BeforeEach
     void setUp() throws Exception {
-        // User 생성
         user = User.builder()
                 .name("홍길동")
                 .email("hong@example.com")
@@ -68,7 +64,6 @@ class TripServiceTest {
                 .build();
         setId(user, 1L);
 
-        // Folder 생성
         folder = Folder.builder()
                 .name("기본 폴더")
                 .isDefault(true)
@@ -76,26 +71,23 @@ class TripServiceTest {
                 .build();
         setId(folder, 1L);
 
-        // TripRequestDto 생성
         requestDto = new TripRequestDto(
                 "제주 여행",
                 "thumbnail",
                 "제주",
+                4,
                 TripStatus.PLANNED,
                 LocalDate.now(),
                 LocalDate.now().plusDays(3),
                 1L
         );
 
-        // Trip Entity
         trip = requestDto.toEntity();
 
-        // TripSearchRequestDto 생성
         searchRequest = new TripSearchRequestDto();
         searchRequest.setStartDate(LocalDate.now());
         searchRequest.setEndDate(LocalDate.now().plusDays(3));
 
-        // 공통 Mock 설정
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
     }
 
@@ -109,53 +101,55 @@ class TripServiceTest {
     void createTrip_Success() {
         // given
         when(tripRepository.save(any(Trip.class))).thenReturn(trip);
-        when(memberService.registerOwner(user, trip)).thenReturn(List.of(new MemberSummaryDto()));
-        when(folderService.getFolderEntity(user, folder.getId() )).thenReturn(folder);
+        when(folderService.getFolderEntity(user, folder.getId())).thenReturn(folder);
+        when(memberService.countMember(trip)).thenReturn(1L);
+        when(memberService.getMemberSummaryDtoList(trip)).thenReturn(Collections.emptyList());
 
         // when
-        TripResponseDto response = tripService.createTrip(1L, requestDto);
+        TripResponseDto response = tripService.createTrip(1L, requestDto, true);
 
         // then
         assertThat(response.getTitle()).isEqualTo("제주 여행");
         verify(tripRepository, times(1)).save(any(Trip.class));
         verify(memberService, times(1)).registerOwner(user, trip);
-        verify(folderService, times(1)).getFolderEntity(user,folder.getId() );
         verify(tripFolderService, times(1)).createTripFolder(trip, folder);
     }
 
     @Test
     void getTrips_Success() {
         // given
-        when(tripRepository.findByUserAndPeriod(eq(user), any(), any()))
+        when(tripFinder.findByUserAndPeriod(user, searchRequest.getStartDate(), searchRequest.getEndDate(), true))
                 .thenReturn(List.of(trip));
+        when(memberService.isMember(user, trip)).thenReturn(true);
+        when(memberService.countMember(trip)).thenReturn(1L);
 
         MemberSummaryDto memberDto = new MemberSummaryDto(1L, "홍길동", "hong@example.com");
-        when(memberService.getMemberSummaryDtoList(trip))
-                .thenReturn(List.of(memberDto));
+        when(memberService.getMemberSummaryDtoList(trip)).thenReturn(List.of(memberDto));
 
         // when
-        List<TripResponseDto> result = tripService.getTrips(1L, searchRequest);
+        List<TripResponseDto> result = tripService.getTrips(1L, searchRequest, true);
 
         // then
         assertThat(result).hasSize(1);
         TripResponseDto response = result.get(0);
         assertThat(response.getTitle()).isEqualTo("제주 여행");
         assertThat(response.getMembers()).hasSize(1);
-        assertThat(response.getMembers().get(0).getName()).isEqualTo("홍길동");
+        assertThat(response.getMemberCount()).isEqualTo(1L);
 
-        verify(tripRepository, times(1)).findByUserAndPeriod(eq(user), any(), any());
-        verify(memberService, times(1)).getMemberSummaryDtoList(trip);
+        verify(tripFinder, times(1))
+                .findByUserAndPeriod(user, searchRequest.getStartDate(), searchRequest.getEndDate(), true);
     }
 
     @Test
     void getTrip_Success() {
         // given
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
+        when(tripFinder.findById(eq(1L), anyBoolean())).thenReturn(trip);
         when(memberService.isMember(user, trip)).thenReturn(true);
+        when(memberService.countMember(trip)).thenReturn(1L);
         when(memberService.getMemberSummaryDtoList(trip)).thenReturn(Collections.emptyList());
 
         // when
-        TripResponseDto response = tripService.getTrip(1L, 1L);
+        TripResponseDto response = tripService.getTrip(1L, 1L, false);
 
         // then
         assertThat(response.getTitle()).isEqualTo("제주 여행");
@@ -165,31 +159,32 @@ class TripServiceTest {
     @Test
     void getTrip_Unauthorized_Throws() {
         // given
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
+        when(tripFinder.findById(1L, true)).thenReturn(trip);
         when(memberService.isMember(user, trip)).thenReturn(false);
 
         // when & then
-        ApiException ex = assertThrows(ApiException.class, () -> tripService.getTrip(1L, 1L));
+        ApiException ex = assertThrows(ApiException.class, () ->
+                tripService.getTrip(1L, 1L, true)
+        );
 
         assertThat(ex.getErrorCode()).isEqualTo(ErrorCode.UNAUTHORIZED_MEMBER_ACCESS);
-        assertThat(ex.getMessage()).contains(ErrorCode.UNAUTHORIZED_MEMBER_ACCESS.getMessage());
-        verify(memberService, times(1)).isMember(user, trip);
     }
 
     @Test
     void updateTrip_Success() {
         // given
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
+        when(tripFinder.findById(1L, true)).thenReturn(trip);
         when(memberService.canEdit(user, trip)).thenReturn(true);
+        when(memberService.countMember(trip)).thenReturn(1L);
         when(memberService.getMemberSummaryDtoList(trip)).thenReturn(Collections.emptyList());
 
         TripRequestDto updateDto = new TripRequestDto(
-                "서울 여행", "thumbnail2", "서울", TripStatus.PLANNED,
-                LocalDate.now(), LocalDate.now().plusDays(2),1L
+                "서울 여행", "thumbnail2", "서울", 3, TripStatus.PLANNED,
+                LocalDate.now(), LocalDate.now().plusDays(2), 1L
         );
 
         // when
-        TripResponseDto response = tripService.updateTrip(1L, 1L, updateDto);
+        TripResponseDto response = tripService.updateTrip(1L, 1L, updateDto, true);
 
         // then
         assertThat(response.getTitle()).isEqualTo("서울 여행");
@@ -199,16 +194,15 @@ class TripServiceTest {
     @Test
     void updateTrip_Unauthorized_Throws() {
         // given
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
+        when(tripFinder.findById(1L, true)).thenReturn(trip);
         when(memberService.canEdit(user, trip)).thenReturn(false);
 
         // when & then
         ApiException ex = assertThrows(ApiException.class, () ->
-                tripService.updateTrip(1L, 1L, requestDto)
+                tripService.updateTrip(1L, 1L, requestDto, true)
         );
 
         assertThat(ex.getErrorCode()).isEqualTo(ErrorCode.UNAUTHORIZED_MEMBER_ACCESS);
-        assertThat(ex.getMessage()).contains(ErrorCode.UNAUTHORIZED_MEMBER_ACCESS.getMessage());
         verify(memberService, times(1)).canEdit(user, trip);
         verify(tripRepository, never()).save(any());
     }
@@ -216,7 +210,7 @@ class TripServiceTest {
     @Test
     void deleteTrip_Success() {
         // given
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
+        when(tripFinder.findById(1L, true)).thenReturn(trip);
         when(memberService.canDelete(user, trip)).thenReturn(true);
 
         // when
@@ -230,7 +224,7 @@ class TripServiceTest {
     @Test
     void deleteTrip_Unauthorized_Throws() {
         // given
-        when(tripRepository.findById(1L)).thenReturn(Optional.of(trip));
+        when(tripFinder.findById(1L, true)).thenReturn(trip);
         when(memberService.canDelete(user, trip)).thenReturn(false);
 
         // when & then
@@ -239,7 +233,6 @@ class TripServiceTest {
         );
 
         assertThat(ex.getErrorCode()).isEqualTo(ErrorCode.UNAUTHORIZED_MEMBER_ACCESS);
-        assertThat(ex.getMessage()).contains(ErrorCode.UNAUTHORIZED_MEMBER_ACCESS.getMessage());
         verify(memberService, times(1)).canDelete(user, trip);
         verify(tripRepository, never()).delete(any());
     }
